--- a/gorby.html
+++ b/gorby.html
@@ -115,7 +115,7 @@
                 <li><strong>Project Period</strong>: Jan 2021 - April 2021</li>
                 <li><strong>Team Members</strong>: Jungmin Ahn, Sara Williams, Anh Tran, Taylor Rosenfeld,<br>
                   Isabella Gonzalez, Satchel Hallmark, Sullivan Wilcox, Colin Cheng</li>
-                <li><strong>Role</strong>: UX Research, Interaction Design, Embeded Programming, Prototyping</li>
+                <li><strong>Role</strong>: UXUI Design, Embeded Programming, Prototyping</li>
                 <li><strong>Vision Video</strong>: <a href="https://youtu.be/sZ2kTrvmN1M" class="atag">https://youtu.be/sZ2kTrvmN1M</a></li>
               </ul>
             </div>
