--- a/index.html
+++ b/index.html
@@ -43,9 +43,14 @@ Thank you.
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   <!-- Swiper -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <!-- Vendor CSS Files -->
@@ -96,6 +101,16 @@ Thank you.
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <a href="/toyota.html" alt="gartner">
+            <div class="portfolio-img"><img src="assets/img/portfolio/Toyota_Thumbnail.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>23,24 Toyota Boshoku Internship</h4>
+              <p>UX</p>
+            </div>
+          </a>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <a href="/revopay.html" alt="revopay">
             <div class="portfolio-img"><img src="assets/img/portfolio/UX_revopay.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
@@ -115,7 +130,7 @@ Thank you.
           </a>
           </div>   
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <a href="/etico.html" alt="etico">
             <div class="portfolio-img"><img src="assets/img/portfolio/UX_etico.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
@@ -123,9 +138,9 @@ Thank you.
               <p>UX</p>
             </div>
           </a>
-          </div>
+          </div> -->
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <a href="nviro.html" alt="nviro">
             <div class="portfolio-img"><img src="assets/img/portfolio/NVIRO_Thumbnail.png" class="img-fluid" alt="NVIRO_Thumbnail"></div>
             <div class="portfolio-info">
@@ -133,7 +148,7 @@ Thank you.
               <p>UX</p>              
             </div>
           </a>
-          </div>
+          </div> -->
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <a href="/gartner.html" alt="gartner">
@@ -143,9 +158,9 @@ Thank you.
               <p>UX</p>
             </div>
           </a>
-          </div>
+          </div>          
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <a href="https://css-zen-garden-updated.netlify.app/" alt="css-zen-garden">
             <div class="portfolio-img"><img src="assets/img/portfolio/web_zengarden.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
@@ -153,14 +168,14 @@ Thank you.
               <p>Web</p>
             </div>
           </a>
-          </div>                                  
+          </div>                                   -->
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">            
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">            
             <div class="portfolio-img"><img src="assets/img/portfolio/blank.png" class="img-fluid" alt="forfume_thumbnail"></div>
-            <!-- <div class="portfolio-info">
+            <div class="portfolio-info">
               <h4>AI 노래가사 감성분석 프로젝트</h4>
-              <p>AI</p>               -->
-            </div>
+              <p>AI</p>              
+            </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <a href="forfume.html" alt="nviro">
@@ -181,9 +196,7 @@ Thank you.
             </div>
           </a>
           </div>  
-        </div>
-
-        
+        </div>        
 
         <!-- <div class="col-lg-4 col-md-6 portfolio-item">          
           <div class="portfolio-img"><img src="assets/img/portfolio/blank.png" class="img-fluid" alt=""></div>       
