--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
     <div class="row">
       
       <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-right" data-aos-delay="100">
-        <h3>Management / Design</h3>
+        <h3>UXUI Design</h3>
         
         <div class="skills-content">
 
